# AsteroidBlitz

./: .gitignore  CMakeLists.txt  Makefile  README.md  my_game
assets/background/: data.json
assets/player/: player.json
assets/sprites/asteroid1/: data.json
assets/sprites/enemy/: data.json
assets/sprites/playerBullet/: data.json
game/include/: Asteroid.h  Bullet.h  Enemy.h  Engine.h  GameObject.h  Math_ext.h  Menu.h  Particle.h  ParticleGenerator.h  PauseMenu.h  Ship.h  Sprite.h  SpriteSheet.h
game/src/: Asteroid.cpp  Bullet.cpp  Enemy.cpp  Engine.cpp  Menu.cpp  Particle.cpp  ParticleGenerator.cpp  PauseMenu.cpp  Ship.cpp  Sprite.cpp  main.cpp
